--- a/index.html
+++ b/index.html
@@ -3,41 +3,224 @@
 
 <head>
 
-	<meta charset="utf-8">
-	<!-- <base href="/"> -->
+    <meta charset="utf-8">
+    <title>Simple Starter</title>
+    <meta name="description" content="Simple Starter Description">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon" href="images/favicon.png">
+    <meta property="og:image" content="images/preview.jpg">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"></noscript>
+</head>
 
-	<title>Simple Starter</title>
-	<meta name="description" content="Simple Starter Description">
-
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-	<link rel="icon" href="images/favicon.png">
-	<meta property="og:image" content="images/preview.jpg">
-
-	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-grid.min.css">
-
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/media.css">
-
-	<script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
-
-	<script src="js/common.js" defer></script>
+<script src="libs/jquery/jquery-3.6.0.min.js" defer></script>
+<script defer src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+<script src="js/common.js" defer></script>
 
 </head>
 
 <body>
 
-	<div class="container"><br>
-		<div class="row">
-			<div class="col-lg-8">
-				<img class="image" src="images/preview.png" alt="Image Example">
-			</div>
-			<div class="col text">
-				<span class="accent">Simple Starter</span>. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae quos ab, incidunt hic recusandae animi nesciunt fugiat ipsa velit nobis, quam corrupti veritatis, perferendis facere et odit autem corporis molestias?
-			</div>
-		</div>
-	</div>
+<div class="container">
+    <div class="row">
+        <div class="hero-banner d-flex flex-column align-items-center">
+            <div class="hero-banner__title mb-2 text-center">Поддержка здесь</div>
+            <div class="hero-banner__subtitle">Мы любим общаться и рады всем отзывам, вопросам <br/> и
+                предложениям. Выберите удобный способ
+            </div>
+            <div class="hero-banner__button-group mt-2">
+                <div class="button button-secondary hero-banner__button">
+                    <span class="icon-chat button__icon"></span>
+                    <span>Онлайн-чат</span>
+                </div>
+                <div class="button button-secondary hero-banner__button">
+                    <span class="icon-call1 button__icon"></span>
+                    <span>Позвонить</span>
+                </div>
+                <div class="button button-secondary hero-banner__button">
+                    <span class="icon-mail button__icon"></span>
+                    <span>Почта</span>
+                </div>
+                <div class="button button-secondary hero-banner__button">
+                    <span class="icon-star button__icon"></span>
+                    <span>Отзыв о сайте</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-10 p-0">
+            <div class="action-banner justify-content-md-center">
+                <div class="row justify-content-xl-between justify-content-center">
+                    <div class="col-xl-5">
+                        <div class="action-banner__text-wrapper">
+                            <div class="action-banner__subtitle text-center text-xl-start mb-4">
+                                Социальные сети и сообщество
+                            </div>
+                            <div class="action-banner__title text-center text-xl-start">
+                                Присоединяйтесь
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 mx-0">
+                        <div class="social justify-content-center justify-content-lg-end">
+                            <a href="/" class="social-item">
+                                <span class="icon-vk"></span>
+                            </a>
+                            <a href="/" class="social-item">
+                                <span class="icon-instagram"></span>
+                            </a>
+                            <a href="/" class="social-item">
+                                <span class="icon-tiktok"></span>
+                            </a>
+                            <a href="/" class="social-item">
+                                <span class="icon-twitter"></span>
+                            </a>
+                            <a href="/" class="social-item">
+                                <span class="icon-yandex"></span>
+                            </a>
+                            <a href="/" class="social-item">
+                                <span class="icon-facebook"></span>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container faq mt-5">
+    <div class="row">
+        <div class="d-flex justify-content-center mb-4 faq__title">
+            <h2 class="faq__title">Часто задаваемые вопросы</h2>
+        </div>
+
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="card card--image swiper-slide">
+                    <div class="card__text">
+                        <div class="card__title">Где работает доставка?</div>
+                    </div>
+                    <div class="card__image">
+                        <img src="/images/basket.png"/>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card__text">
+                        <div class="card__title">Где работает доставка?</div>
+                        <div class="card__subtitle">Карта лояльности с вашим номером покупателя. Это карта лояльности
+                            с вашим
+                        </div>
+                    </div>
+                </div>
+                <div class="card card--image swiper-slide">
+                    <div class="card__text">
+                        <div class="card__title">Где работает доставка?</div>
+                        <div class="card__subtitle">Карта лояльности с вашим номером</div>
+                    </div>
+                    <div class="card__image">
+                        <img src="/images/basket.png"/>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card__text">
+                        <div class="card__title">В какое время возможен самовывоз В какое время возможен самовывоз?
+                        </div>
+                        <div class="card__subtitle">Карта лояльности с вашим</div>
+                    </div>
+                </div>
+                <div class="card swiper-slide">
+                    <div class="card__text">
+                        <div class="card__title">В какое время возможен самовывоз В какое время возможен самовывоз?
+                        </div>
+                        <div class="card__subtitle">Карта лояльности с вашим</div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>
+
+    </div>
+</div>
+<div class="container info">
+    <div class="d-flex justify-content-center info__title">
+        <h2 >Справка</h2>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-md-10 p-0">
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item mb-3">
+                    <h3 class="accordion-header">
+                        <div class="accordion-button collapsed" data-bs-toggle="collapse"
+                             data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false"
+                             aria-controls="panelsStayOpen-collapseOne">
+                            Бережная сборка
+                        </div>
+                    </h3>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h3 class="accordion-header">
+                        <div class="accordion-button collapsed" data-bs-toggle="collapse"
+                             data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                             aria-controls="panelsStayOpen-collapseTwo">
+                            Способы доставки и самовывоза
+                        </div>
+                    </h3>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            Это карта лояльности с вашим номером покупат Это карта лояльности с вашим номером покупат
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h3 class="accordion-header">
+                        <div class="accordion-button collapsed" data-bs-toggle="collapse"
+                             data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                             aria-controls="panelsStayOpen-collapseThree">
+                            Минимальная сумма заказа
+                        </div>
+                    </h3>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h3 class="accordion-header">
+                        <div class="accordion-button collapsed" data-bs-toggle="collapse"
+                             data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                             aria-controls="panelsStayOpen-collapseThree">
+                            Лёгкий возврат
+                        </div>
+                    </h3>
+                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            Это карта лояльности с вашим номером покупат Это карта лояльности с вашим номером покупат
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 </body>
 </html>
+
+
