add link on delivery

--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
 
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="card card--image swiper-slide">
+                <a href="delivery.html" class="card card--image swiper-slide">
                     <div class="card__text">
                         <div class="card__title">Где работает доставка?</div>
                     </div>
                     <div class="card__image">
                         <img src="../images/basket.png"/>
                     </div>
-                </div>
+                </a>
                 <div class="card swiper-slide">
                     <div class="card__text">
                         <div class="card__title">Где работает доставка?</div>
