--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="card__title">Где работает доставка?</div>
                     </div>
                     <div class="card__image">
-                        <img src="../images/basket.png" alt="basket"/>
+                        <img src="https://ibb.co/CtkjfJ4" alt="basket"/>
                     </div>
                 </a>
                 <div class="card swiper-slide">
@@ -129,7 +129,7 @@
                         <div class="card__subtitle">Карта лояльности с вашим номером</div>
                     </div>
                     <div class="card__image">
-                        <img src="../images/basket.png" alt="basket"/>
+                        <img src="https://ibb.co/CtkjfJ4" alt="basket"/>
                     </div>
                 </div>
                 <div class="card swiper-slide">
